--- a/resource/public/index.html
+++ b/resource/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>laiqiansheng/MoneyPrinterTurbo</title>
+    <title>视频生成</title>
 </head>
 <body>
-<h1>MoneyPrinterTurbo</h1>
+<h1>视频生成</h1>
 <a href="https://github.com/laiqiansheng/MoneyPrinterTurbo">https://github.com/laiqiansheng/MoneyPrinterTurbo</a>
 <p>
     只需提供一个视频 主题 或 关键词 ，就可以全自动生成视频文案、视频素材、视频字幕、视频背景音乐，然后合成一个高清的短视频。
